========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-05-05

  - Added a shell function to filter a set of strings (for tags or links) with a
    regular expression and return the first one. This way you can extract some
    of the tags or links with a pattern as columns.


2016-05-01

  - Fixed issue #124, a leak in the grammar parser which would leak the entire
    set of entries on every instance of parse.

  - Fixed some warnings about unclosed files which occur only on default python
    branch.


2016-04-29

  - Don't just log an extraction error to logging.error() in the regression
    tests; let the exception through. This makes building and debugging
    importers much easier.

  - Created an experimental script to extract date/location information required
    for a naturalization application.


2016-04-24

  - Rewrote the section on "Core Data Structures" of the Design Doc, to reflect
    the newer internals of Beancount, those which have been merged from the
    ongoing 'booking' branch.
    See http://furius.ca/beancount/doc/design-doc.


2016-04-23

  - Added beancount.ingest.importers.fileonly, a simplistic importer which can
    be instantiated to just file away some downloads without extracting anything
    from them.


2016-04-18

  - In bean-doctor context, all the accounts should appear in the
    post-transaction balances, even if their balance is empty. This had been
    fixed for the pre-transaction balances but I stumbled upon a case of
    post-transaction balances not showing an empty account.


2016-04-17

  - Added support for the BEANCOUNT_LOAD_CACHE_FILENAME environment variable,
    which can be set in order to overridde the location of the pickle cache.
    This variable may contain the string "{filename}", and if it is present the
    basename of the beancount file will be spliced in. This can be useful if,