@@ -4,6 +4,15 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2016-05-08
+
+  - In the output of bean-price, sort prices exclusively by currency, regardless
+    of date. This is because on weekends you'll tend to get slightly varying
+    dates, and manual/occasional price updates are usually put in "chunks" in a
+    file section. It's easier to visually find the price by scanning by currency
+    order.
+
+
 2016-05-05
 
   - Added a shell function to filter a set of strings (for tags or links) with a
